# Tobias_voice

./: .gitignore  Dockerfile  README.md  integration.md  mcp_bridge.py  noturna.sh  noturna_agent.py  noturna_client.py  noturna_stack.yml  pyproject.toml  whatsapp_bridge.py
prompts/: prompt_noturna.md
